# spacecase-startup

./: .gitignore  ROADMAP.md  spacecase-mvp-content-audit.md
backend/: .env  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  apod.py  orders.py
backend/app/application/apod/: services.py
backend/app/application/orders/: services.py
backend/app/core/: config.py
backend/app/domain/apod/: entities.py  errors.py  ports.py
backend/app/domain/orders/: entities.py  ports.py
backend/app/infrastructure/db/: init_db.py  order_model.py  order_repository.py  session.py
backend/app/infrastructure/nasa/: client.py
backend/app/infrastructure/security/: order_view_token.py
backend/app/infrastructure/stripe/: stripe_provider.py
backend/tests/: conftest.py  test_apod.py  test_health.py  test_order_security.py
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: smoke.spec.ts
frontend/public/: site.webmanifest
frontend/src/: instrumentation-client.ts  sentry.edge.config.ts
frontend/src/app/: global-error.tsx  globals.css  layout.tsx
frontend/src/app/order/: error.tsx
frontend/src/components/: AppBackground.tsx  Container.tsx  FloatingCase.tsx  Footer.tsx  Header.tsx  Icons.tsx  LandingPage.tsx  Logo.tsx  MobileNavMenu.tsx  Phone.tsx  Reviews.tsx  Section.tsx  SpaceDateScanner.tsx  SpaceDateScannerDateDigits.tsx  SpaceDateScannerTimeline.tsx
frontend/src/components/landing/: FAQSection.tsx  (+12 more)
frontend/src/hooks/: useApodDate.ts
(+10 files in other folders)
