[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
    "stripe>=14.4.1",
    "sqlalchemy>=2.0.48",
    "aiosqlite>=0.22.1",
    "email-validator>=2.3.0",
    "greenlet>=3.3.2",
]
